Update buuton sendmail

--- a/ShoesAdmin/src/app/components/chitietkhohang/chitietkhohang.component.html
+++ b/ShoesAdmin/src/app/components/chitietkhohang/chitietkhohang.component.html
@@ -133,7 +133,7 @@
                     <i class="ft-corner-up-left"></i> Quay lại
                   </button>
                   <button *ngIf="role == 'ROLE_ADMIN'" (click)="saveHangTrongKho()" type="button" class="btn btn-raised btn-raised btn-primary">
-                    <i class="fa fa-check-square-o"></i> Lưu
+                    <i class="ft-save"></i> Lưu
                   </button>
                 </div>
               </form>
