--- a/ShoesAdmin/src/app/components/loaigiay/loaigiay.component.html
+++ b/ShoesAdmin/src/app/components/loaigiay/loaigiay.component.html
@@ -2,6 +2,7 @@
   <!--Extended Table starts-->
   <div class="row">
     <div class="col-12">
+      <div [innerHTML]="demo"></div>
       <div class="content-header">THÔNG TIN LOẠI GIÀY</div>
     </div>
   </div>
