--- a/karl-shop/src/app/components/user-login/user-login.component.html
+++ b/karl-shop/src/app/components/user-login/user-login.component.html
@@ -3,8 +3,14 @@
   <mat-tab label="Đăng ký">
     <form [formGroup]="regisForm" (ngSubmit)="saveNewCustomer(regisForm.value)" class="regis">
       <div class="example-container">
-        <mat-form-field>
+
+        <em *ngIf="email.invalid && (email.dirty || email.touched)">Email chưa đúng định dạng</em>
+        <mat-form-field *ngIf="newCustomer.email != null">
           <input matInput [readonly]="true" placeholder="Email" [formControl]="email" value="{{newCustomer.email}}">
+        </mat-form-field>
+
+        <mat-form-field *ngIf="newCustomer.email == null">
+          <input matInput placeholder="Email" [formControl]="email" value="">
         </mat-form-field>
 
         <mat-form-field>
@@ -15,7 +21,7 @@
           <input matInput placeholder="Mobile Phone" [formControl]="soDienThoai" value="{{newCustomer.soDienThoai}}" required>
         </mat-form-field>
         <em *ngIf="soDienThoai.invalid && (soDienThoai.dirty || soDienThoai.touched)">Số điện thoại chưa đúng định dạng</em>
-        
+
         <mat-form-field>
           <input matInput placeholder="Adress" [formControl]="diaChi" value="{{newCustomer.diaChi}}" required>
         </mat-form-field>
@@ -25,7 +31,7 @@
           <div class="button-row">
             <button mat-raised-button [disabled]="regisForm.invalid" color="primary" type="submit" class="btnLogin">Đăng ký</button>
           </div>
-          <small (click)="showModal()">Đã có tài khoản</small>
+          <!-- <small (click)="showModal()">Đã có tài khoản</small> -->
         </section>
 
       </div>
@@ -51,8 +57,8 @@
 
 </mat-tab-group>
 <!-- Show login-modal after (click)="getAllProductInCart()" -->
-<div class="modal-wrapper"></div>
-
+<!-- <div class="modal-wrapper"></div> -->
+<!-- 
 <div class="modal-login">
   <div class="modal-content">
     <div class="row row-title">
@@ -72,5 +78,5 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
 <!-- Show login-modal after (click)="getAllProductInCart()" -->
