Update Google Login

--- a/karl-shop/src/app/components/cart/cart.component.html
+++ b/karl-shop/src/app/components/cart/cart.component.html
@@ -128,10 +128,10 @@
       </div>
       <div class="row modal-row">
         <div class="col-sm-12 text-center">
-          <a class="btn btn-primary ff" (click)="signInWithFB()">Đăng nhập
+          <a class="btn btn-primary ff" id="fbMode" (click)="signInWithFB()">Đăng nhập
             <i class="fab fa-facebook-f icon"></i>
           </a>
-          <a class="btn btn-danger gg" (click)="signInWithGoogle()">Đăng nhập
+          <a class="btn btn-danger gg" id="ggMode" (click)="signInWithGoogle()">Đăng nhập
             <i class="fab fa-google icon"></i>
           </a>
         </div>
