--- a/ShoesAdmin/src/app/components/chitiet-sanpham/chitiet-sanpham.component.html
+++ b/ShoesAdmin/src/app/components/chitiet-sanpham/chitiet-sanpham.component.html
@@ -141,7 +141,7 @@
                     <tr>
                       <th>STT</th>
                       <th>Hình ảnh</th>
-                      <th *ngIf="role == 'ROLE_ADMIN'">Chức năng</th>
+                      <!-- <th *ngIf="role == 'ROLE_ADMIN'">Chức năng</th> -->
                     </tr>
                   </thead>
                   <tbody>
@@ -151,10 +151,10 @@
                         <img src="{{image.hinh}}" width="100">
                       </td>
                       <td style="vertical-align: middle">
-                        <a *ngIf="role == 'ROLE_ADMIN'" class="danger p-0" data-original-title="" title="Xóa" id="confirm-cancel">
-                            <i (click)="showModal()" class="ft-x font-medium-3 mr-2"></i>
+                        <!-- <a *ngIf="role == 'ROLE_ADMIN'" class="danger p-0" data-original-title="" title="Xóa" id="confirm-cancel">
+                            <i (click)="showModal()" class="ft-x font-medium-3 mr-2"></i> -->
                           <!-- <i (click)="delSize(size.kichThuocId)" class="ft-x font-medium-3 mr-2"></i> -->
-                        </a>
+                        <!-- </a> -->
                       </td>
                     </tr>
                   </tbody>
