--- a/karl-shop/src/app/components/side-bar/side-bar.component.html
+++ b/karl-shop/src/app/components/side-bar/side-bar.component.html
@@ -14,7 +14,7 @@
                   <ul id="menu-content2" class="menu-content collapse out">
                     <li class="">
                       <ul class="sub-menu">
-                        <li (click)="goCate(name)" class="select" *ngFor="let name of _tenGiay">
+                        <li (click)="goCate(name)" id="{{name}}" class="select" *ngFor="let name of _tenGiay">
                             <a class="btnSelect">{{name}}</a>
                         </li>
                       </ul>
@@ -33,7 +33,7 @@
               <h6 class="widget-title mb-30">Lọc theo kích cỡ</h6>
               <div class="widget-desc">
                 <ul class="d-flex justify-content-between ul-size">
-                  <li *ngFor="let size of _kichThuocArray" class="sizes">
+                  <li *ngFor="let size of _kichThuocArray" class="sizes" id="{{size.id}}">
                     <a (click)="goSize(size.id)" class="a-size">{{ size.tenKichThuoc }}</a>
                   </li>
                 </ul>
