Update about && lienhe

--- a/karl-shop/src/app/components/header/header.component.html
+++ b/karl-shop/src/app/components/header/header.component.html
@@ -101,16 +101,16 @@
                         <a class="nav-link" routerLink="/home">Trang chủ</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link">Giới thiệu</a>
+                        <a class="nav-link" routerLink="/home/about">Giới thiệu</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" routerLink="/home/products">Sản phẩm</a>
                       </li>
-                      <li class="nav-item">
+                      <!-- <li class="nav-item">
                         <a class="nav-link" routerLink="/home/account">Tài khoản</a>
-                      </li>
+                      </li> -->
                       <li class="nav-item">
-                        <a class="nav-link" href="#">Liên Hệ</a>
+                        <a class="nav-link" routerLink="/home/lienhe">Liên Hệ</a>
                       </li>
                     </ul>
                   </div>
