--- a/karl-shop/src/app/components/lienhe/lienhe.component.html
+++ b/karl-shop/src/app/components/lienhe/lienhe.component.html
@@ -12,12 +12,12 @@
     </p>
     <p style="text-align: center;">
         <span style="font-size: medium;">
-            <strong>Địa chỉ:</strong> 606/24/16 Đường 3/2, P.14, Q.10, Tp. Hồ Chí Minh</span>
+            <strong>Địa chỉ:</strong> 606 Đường 3/2, P.12, Q.10, Tp. Hồ Chí Minh</span>
     </p>
     <p style="text-align: center;">
         <em>
             <span style="font-size: medium;">
-                <span style="font-family: verdana,geneva;">(Hẻm đối diện ngã 3 Đường 3 Tháng 2 và Nguyễn Lâm Q10, Kế bên ngân hàng HDbank chi nhánh 3/2)</span>
+                <span style="font-family: verdana,geneva;">(Kế bên ngân hàng BIDV chi nhánh 3/2)</span>
             </span>
         </em>
     </p>
@@ -64,6 +64,12 @@
             </strong>
         </span>
     </p>
+    <div class="text-center row">
+        <div class="col-md-12">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3919.5441853978614!2d106.66642981514444!3d10.769569462264291!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31752ee856496b15%3A0x126ed39a6826c0a0!2zNjA2IMSQxrDhu51uZyAzLzIsIFBoxrDhu51uZyAxMiwgUXXhuq1uIDEwLCBI4buTIENow60gTWluaCwgVmlldG5hbQ!5e0!3m2!1sen!2s!4v1532875529035"
+                width="80%" height="600" frameborder="0" style="border:0" allowfullscreen></iframe>
+        </div>
+    </div>
     <!-- <p style="text-align: center;">&nbsp;</p>
     <p style="text-align: center;">&nbsp;</p>
     <p style="text-align: center;">
