update lienhe about

--- a/karl-shop/src/app/components/lienhe/lienhe.component.html
+++ b/karl-shop/src/app/components/lienhe/lienhe.component.html
@@ -1,101 +1,34 @@
-<div class="cmscontent_title">
-</div>
-<div class="cmscontent_contents">
-    <p style="text-align: center;">
-        <span style="color: #ff0000;">
-            <span style="font-size: x-large;">
-                <span style="font-family: verdana,geneva;">
-                    <strong>CỬA HÀNG GIÀY KARL SHOP</strong>
-                </span>
-            </span>
-        </span>
-    </p>
-    <p style="text-align: center;">
-        <span style="font-size: medium;">
-            <strong>Địa chỉ:</strong> 606 Đường 3/2, P.12, Q.10, Tp. Hồ Chí Minh</span>
-    </p>
-    <p style="text-align: center;">
-        <em>
-            <span style="font-size: medium;">
-                <span style="font-family: verdana,geneva;">(Kế bên ngân hàng BIDV chi nhánh 3/2)</span>
-            </span>
-        </em>
-    </p>
-    <p style="text-align: center;">
-        <span style="font-size: medium;">
-            <span style="font-family: verdana,geneva;">
-                <strong>Điện thoại: </strong> +84 090 3556 778</span>
-        </span>
-    </p>
-    <p style="text-align: center;">
-        <span style="font-size: medium;">
-            <span style="font-family: verdana,geneva;">
-                <strong>Hổ trợ trực tuyến gmail:</strong>
-                <strong>
-                    <a href="mailto:conque6@gmail.com">webgiaydep</a>
-                </strong>
-            </span>
-        </span>
-    </p>
-    <p style="text-align: center;">
-        <span style="font-size: medium;">
-            <span style="font-family: verdana,geneva;">
-                <br>
-            </span>
-        </span>
-    </p>
-    <ul style="text-align: center;">
-    </ul>
-    <ul style="text-align: center;">
-    </ul>
-    <p style="text-align: center;">
-        <span style="font-size: medium;">
-            <strong>
-                <span style="color: #0000ff;">Chủ tài khoản : Phạm Xuân Khoa</span>
-            </strong>
-        </span>
-    </p>
-    <p style="text-align: center;">
-        <span style="font-size: medium;">
-            <strong>
-                <span style="color: #0000ff;">
-                    <span style="font-family: verdana,geneva;">Tài Khoản Ngân Hàng Vietcombank: 0421003824245</span>
-                </span>
-            </strong>
-        </span>
-    </p>
-    <div class="text-center row">
-        <div class="col-md-12">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3919.5441853978614!2d106.66642981514444!3d10.769569462264291!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31752ee856496b15%3A0x126ed39a6826c0a0!2zNjA2IMSQxrDhu51uZyAzLzIsIFBoxrDhu51uZyAxMiwgUXXhuq1uIDEwLCBI4buTIENow60gTWluaCwgVmlldG5hbQ!5e0!3m2!1sen!2s!4v1532875529035"
-                width="80%" height="600" frameborder="0" style="border:0" allowfullscreen></iframe>
-        </div>
+<div class="container">
+  <div class="row">
+    <div class="col-md-12 text-center info">
+      <h1 class="title">CỬA HÀNG GIÀY KARL SHOP</h1>
+      <div class="add">
+        <strong class="address">Địa chỉ:
+          <span> 279 Hai Bà Trưng, Phường 8, Quận 3, Hồ Chí Minh.</span>
+        </strong>
+        <br>
+        <em class="address-detail">(Hẻm đối diện ngã 3 Đường 3 Tháng 2 và Nguyễn Lâm Q10, Kế bên ngân hàng HDbank chi nhánh 3/2)</em>
+      </div>
+
+      <div class="hotline">
+        <strong class="phone">Điện thoại:
+          <span> +84 090 3556 778</span>
+        </strong>
+        <br>
+        <strong class="support">Hỗ trợ trực tuyến gmail:
+          <span>webgiaydep@gmail.com</span>
+        </strong>
+      </div>
+
+      <div class="acc">
+        <p class="account">Chủ tài khoản : Phạm Xuân Khoa</p>
+        <p class="account">Tài Khoản Ngân Hàng Vietcombank: 0421003824245</p>
+      </div>
+
     </div>
-    <!-- <p style="text-align: center;">&nbsp;</p>
-    <p style="text-align: center;">&nbsp;</p>
-    <p style="text-align: center;">
-        <span style="font-size: medium;">Bản đồ đường đi địa chỉ: 606/24/16 Đường 3/2, Phường 14, quận 10</span>
-    </p>
-    <p style="text-align: center;">&nbsp;</p>
-    <p style="text-align: center;">&lt;iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3919.588243481755!2d106.66061231480062!3d10.766182992328481!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31752ee894b40451%3A0xc69362d8b454136!2zV2ViIEdpw6B5IMSQ4bq5cA!5e0!3m2!1sen!2s!4v1466448166904"
-        width="800" height="600" frameborder="0" style="border:0" allowfullscreen&gt;&lt;/iframe&gt;</p>
-    <p style="text-align: center;">
-        <span style="font-size: medium;">
-            <br>
-        </span>
-    </p>
-    <p style="text-align: center;">
-        <span style="font-family: verdana, geneva;">Bấm vô đây để có Map trên Iphone:&nbsp;
-            <a title="Map đến Shop  Web Giay Dep 3/2" href="https://goo.gl/maps/droPwUUgZrN2">https://goo.gl/maps/droPwUUgZrN2</a>
-        </span>
-    </p> -->
-    <p style="text-align: center;">
-        <span style="font-family: verdana,geneva;">
-            <br>
-        </span>
-    </p>
-    <p>
-        <span style="font-family: verdana,geneva;">
-            <br>
-        </span>
-    </p>
+    <div class="col-md-12 map">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3919.3030165600253!2d106.68944511480082!3d10.788087992313589!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x59471dc3e7077d72!2zQWRpZGFzIEhhaSBCw6AgVHLGsG5n!5e0!3m2!1svi!2s!4v1532878257746"
+        width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+    </div>
+  </div>
 </div>
