--- a/karl-shop/src/app/components/about/about.component.css
+++ b/karl-shop/src/app/components/about/about.component.css
@@ -1,4 +1,22 @@
-.about{
-    height: 800px;
-    padding: 20px;
+.container {
+    padding-top: 20px;
+}
+h1.title {
+    font-size: 23px;
+    text-align: center;
+}
+
+p.para1, .para2 {
+    font-size: 14px;
+    margin-bottom: 25px;
+}
+p.para1::after {
+    content: "";
+    width: 100%;
+    background: #EBEBEB;
+    height: 1px;
+    display: inline-block;
+}
+li {
+    margin-bottom: 10px;
 }
