--- a/karl-shop/src/app/components/about/about.component.html
+++ b/karl-shop/src/app/components/about/about.component.html
@@ -1,17 +1,53 @@
-<div class="row">
-    <div class="about">
-        <h1>
-            Giới thiệu về Karl Shop
-        </h1>                                                
+<div class="container">
+  <div class="row">
+    <div class="col-md-6">
+      <div class="about">
+        <h1 class="title">
+          Đôi nét về Karl Shop
+        </h1>
         <div class="article_detail">
-            <p>Hệ thống giày&nbsp;<strong>KarlSHOP</strong>&nbsp;chuyên thiết kế và kinh doanh các mặt hàng giày dép cho giới trẻ, là cấu nối cho bạn trẻ cả nước tiếp cận với xu hướng thời trang giày trên thế giới. "Chúng tôi mang đến sự khác biệt!" - Cùng với xu hướng thời trang của thế giới&nbsp;<strong>Hệ thống KarlSHOP</strong>&nbsp;đã và đang không ngừng đổi mới để mang đến cho các bản trẻ các mẫu giày thời trang độc đáo, mới lạ, để tiên phong cho một phong cách thời trang mới, một phong cách biểu tượng cho giới trẻ trên cả nước.</p>
-        
-        <p>Vì thế&nbsp;<strong>KarlSHOP</strong>&nbsp;đang dần trở thành một cái tên quen thuộc với tất cả các bạn trẻ với những phong cách thời trang hoàn toàn mới lạ, khẳng định cá tính của chính mình.</p>
-        
-        <p>Thành lập hơn 5 năm với hệ thống hơn 32 cửa hàng trong tp. hcm và các tỉnh tây nam bộ.</p>
-        
-        <p><em>Sự hài lòng của các bạn chính là mục tiêu phấn đấu của chúng tôi.</em></p>
-        
+          <p class="para1">Hệ thống giày&nbsp;
+            <strong>KarlSHOP</strong>&nbsp;chuyên thiết kế và kinh doanh các mặt hàng giày dép cho giới trẻ, là cấu nối cho bạn trẻ
+            cả nước tiếp cận với xu hướng thời trang giày trên thế giới. "Chúng tôi mang đến sự khác biệt!" - Cùng với xu
+            hướng thời trang của thế giới&nbsp;
+            <strong>Hệ thống KarlSHOP</strong>&nbsp;đã và đang không ngừng đổi mới để mang đến cho các bản trẻ các mẫu giày thời
+            trang độc đáo, mới lạ, để tiên phong cho một phong cách thời trang mới, một phong cách biểu tượng cho giới trẻ
+            trên cả nước.</p>
+          <p class="para1">Vì thế&nbsp;
+            <strong>KarlSHOP</strong>&nbsp;đang dần trở thành một cái tên quen thuộc với tất cả các bạn trẻ với những phong cách
+            thời trang hoàn toàn mới lạ, khẳng định cá tính của chính mình.</p>
+          <p class="para1">Thành lập hơn 5 năm với hệ thống hơn 32 cửa hàng trong tp. hcm và các tỉnh tây nam bộ.</p>
+          <p class="para2">
+            <em>Sự hài lòng của các bạn chính là mục tiêu phấn đấu của chúng tôi.</em>
+          </p>
         </div>
+      </div>
     </div>
+    <div class="col-md-6 media">
+      <mat-tab-group>
+        <mat-tab label="Hình ảnh">
+          <div class="flexslider">
+            <ul class="slides">
+              <li>
+                <img src="../../../assets/images/bg-img/s1.jpg" />
+              </li>
+              <li>
+                <img src="../../../assets/images/bg-img/s2.jpg" />
+              </li>
+              <li>
+                <img src="../../../assets/images/bg-img/s3.jpg" />
+              </li>
+              <li>
+                <img src="../../../assets/images/bg-img/s4.jpg" />
+              </li>
+            </ul>
+          </div>
+        </mat-tab>
+        <mat-tab label="Video">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/hqaUF2JNY_U" frameborder="0" allow="autoplay; encrypted-media"
+            allowfullscreen></iframe>
+        </mat-tab>
+      </mat-tab-group>
+    </div>
+  </div>
 </div>
